force-app/main/default/objects/VisitPlanning__c/VisitPlanning__c.object-meta.xml
<CustomObject>
    <label>Planejamento de Visita</label>
    <nameField>
        <label>Planejamento da Visita Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planejamento de Visitas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>