force-app/main/default/objects/VisitPlanning__c/fields/AutoNumberGenerator__c.field-meta.xml
<CustomField>
    <fullName>AutoNumberGenerator__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Gerador de ExternalId</label>
    <type>AutoNumber</type>
</CustomField>