force-app/main/default/objects/VisitPlanning__c/fields/BP_Property__c.field-meta.xml
<CustomField>
    <fullName>BP_Property__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>BP Propriedade</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.BpType__c</field>
            <operation>equals</operation>
            <value>Propriedade</value>
        </filterItems>
        <filterItems>
            <field>$Source.Main_BP__c</field>
            <operation>equals</operation>
            <valueField>Account.ParentId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planejamento de Visitas (BP Propriedade)</relationshipLabel>
    <relationshipName>Planejamento_de_Visitas1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>