force-app/main/default/objects/VisitPlanning__c/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <label>Motivo do Cancelamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>