force-app/main/default/objects/VisitPlanning__c/fields/CTVvisit__c.field-meta.xml
<CustomField>
    <fullName>CTVvisit__c</fullName>
    <label>(Apagar campo)CTV da Visita</label>
    <length>100</length>
    <type>Text</type>
</CustomField>