force-app/main/default/objects/VisitPlanning__c/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cultura</label>
    <referenceTo>Cultura__c</referenceTo>
    <relationshipLabel>Planejamento de Visitas</relationshipLabel>
    <relationshipName>Planejamento_de_Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>