force-app/main/default/objects/VisitPlanning__c/fields/DomicilioFiscal__c.field-meta.xml
<CustomField>
    <fullName>DomicilioFiscal__c</fullName>
    <label>Domicilio Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>