force-app/main/default/objects/VisitPlanning__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Data Fim do Plano</label>
    <type>Date</type>
</CustomField>