force-app/main/default/objects/VisitPlanning__c/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <label>Horário Final</label>
    <required>true</required>
    <type>Time</type>
</CustomField>