force-app/main/default/objects/VisitPlanning__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <type>AutoNumber</type>
</CustomField>