force-app/main/default/objects/VisitPlanning__c/fields/ExternalIdApp__c.field-meta.xml
<CustomField>
    <fullName>ExternalIdApp__c</fullName>
    <externalId>true</externalId>
    <label>ExternalIdApp</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>