force-app/main/default/objects/VisitPlanning__c/fields/InitialDate__c.field-meta.xml
<CustomField>
    <fullName>InitialDate__c</fullName>
    <label>Data de Início do Plano</label>
    <type>Date</type>
</CustomField>