force-app/main/default/objects/VisitPlanning__c/fields/LastVisit_Date__c.field-meta.xml
<CustomField>
    <fullName>LastVisit_Date__c</fullName>
    <formula>MainBP__r.LastVisit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data da Última Visita</label>
    <type>Date</type>
</CustomField>