force-app/main/default/objects/VisitPlanning__c/fields/Main_BP__c.field-meta.xml
<CustomField>
    <fullName>Main_BP__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>BP Principal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Parent.BpType__c</field>
            <operation>equals</operation>
            <value>Cliente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planejamento de Visitas (BP Principal)</relationshipLabel>
    <relationshipName>Planejamento_de_Visitas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>