force-app/main/default/objects/VisitPlanning__c/fields/MainBP__c.field-meta.xml
<CustomField>
    <fullName>MainBP__c</fullName>
    <label>BP Principal</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.BpType__c</field>
            <operation>equals</operation>
            <value>Cliente</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Planejamento de Visitas</relationshipLabel>
    <relationshipName>Planejamento_de_Visitas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>