force-app/main/default/objects/VisitPlanning__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Observação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>