force-app/main/default/objects/VisitPlanning__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objetivo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Geração de demanda</fullName>
            </value>
            <value>
                <fullName>Acompanhamento técnico</fullName>
            </value>
            <value>
                <fullName>Acompanhamento colheita</fullName>
            </value>
            <value>
                <fullName>Cobrança</fullName>
            </value>
            <value>
                <fullName>Coleta de Documentos</fullName>
            </value>
            <value>
                <fullName>Coleta assinatura doctos</fullName>
            </value>
            <value>
                <fullName>Fechamento e Planej. de Safra</fullName>
            </value>
            <value>
                <fullName>Evento</fullName>
            </value>
            <value>
                <fullName>Treinamento e Reunião</fullName>
            </value>
            <value>
                <fullName>Ocorrência</fullName>
            </value>
            <value>
                <fullName>Entrega de Produto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>