force-app/main/default/objects/VisitPlanning__c/fields/Presential__c.field-meta.xml
<CustomField>
    <fullName>Presential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presencial</label>
    <type>Checkbox</type>
</CustomField>