force-app/main/default/objects/VisitPlanning__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lembrete</label>
    <type>Checkbox</type>
</CustomField>