force-app/main/default/objects/VisitPlanning__c/fields/ReschedulingReason__c.field-meta.xml
<CustomField>
    <fullName>ReschedulingReason__c</fullName>
    <label>Motivo do Reagendamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>