force-app/main/default/objects/VisitPlanning__c/fields/RTR__c.field-meta.xml
<CustomField>
    <fullName>RTR__c</fullName>
    <label>RTR Gerado</label>
    <summaryFilterItems>
        <field>TechnicalReport__c.Status__c</field>
        <operation>equals</operation>
        <value>Gerado</value>
    </summaryFilterItems>
    <summaryForeignKey>TechnicalReport__c.VisitPlanning__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>