force-app/main/default/objects/VisitPlanning__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Safra</label>
    <referenceTo>Safra__c</referenceTo>
    <relationshipLabel>Planejamento de Visitas</relationshipLabel>
    <relationshipName>Planejamento_de_Visitas</relationshipName>
    <type>Lookup</type>
</CustomField>