force-app/main/default/objects/VisitPlanning__c/fields/SellOrg__c.field-meta.xml
<CustomField>
    <fullName>SellOrg__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organização de Venda</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Planejamento de Visitas</relationshipLabel>
    <relationshipName>Planejamento_de_Visitas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>