force-app/main/default/objects/VisitPlanning__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <label>Horário Inicial</label>
    <required>true</required>
    <type>Time</type>
</CustomField>