force-app/main/default/objects/VisitPlanning__c/fields/VisitSeller__c.field-meta.xml
<CustomField>
    <fullName>VisitSeller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CTV da Visita</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Planejamento_de_Visitas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>