force-app/main/default/objects/VisitPlanning__c/validationRules/Valida_Status_Cancelamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Status_Cancelamento</fullName>
    <active>true</active>
    <description>Se o campo Status for atualizado para Cancelado, obrigar o preenchimento do campo Motivo do Cancelamento.</description>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;Cancelado&quot;)) &amp;&amp;
 ISBLANK(CancellationReason__c)</errorConditionFormula>
    <errorMessage>Por favor, informe o Motivo do Cancelamento da Visita.</errorMessage>
</ValidationRule>