force-app/main/default/objects/VisitPlanning__c/validationRules/Valida_Status_Reagendamento.validationRule-meta.xml
<ValidationRule>
    <fullName>Valida_Status_Reagendamento</fullName>
    <active>true</active>
    <description>Se o campo Status for atualizado para Reagendado, obrigar o preenchimento dos campos Motivo do Reagendamento e Houve Deslocamento.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Reagendado&quot;),
  OR(ISBLANK(ReschedulingReason__c),
     ISPICKVAL(Displacement__c, &quot;&quot;)))</errorConditionFormula>
    <errorMessage>Para Reagendar uma Visita você deve preencher os campos &apos;Motivo do Reagendamento&apos; e &apos;Houve Deslocamento&apos;.</errorMessage>
</ValidationRule>