force-app/main/default/objects/VisitPlanning__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BP_Property__c</columns>
    <columns>VisitSeller__c</columns>
    <columns>InitialDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>