force-app/main/default/objects/VisitPlanning__c/listViews/Atrasado.listView-meta.xml
<ListView>
    <fullName>Atrasado</fullName>
    <columns>NAME</columns>
    <columns>MainBP__c</columns>
    <columns>BP_Property__c</columns>
    <columns>VisitSeller__c</columns>
    <columns>InitialDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Atrasado</value>
    </filters>
    <label>Atrasado</label>
</ListView>