force-app/main/default/objects/VisitPlanning__c/listViews/Concluido.listView-meta.xml
<ListView>
    <fullName>Concluido</fullName>
    <columns>NAME</columns>
    <columns>MainBP__c</columns>
    <columns>BP_Property__c</columns>
    <columns>VisitSeller__c</columns>
    <columns>InitialDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Concluído</value>
    </filters>
    <label>Concluído</label>
</ListView>